--- a/Homework/pytest.ini
+++ b/Homework/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
 addopts = --doctest-modules --doctest-continue-on-failure
+filterwarnings =
+    ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead:DeprecationWarning
